# engawa

./: AGENTS.md  Cargo.toml  README.md  Taskfile.yml
.claude/: settings.local.json
docs/documentations/: layered-architecture-basic.md  software-architecture.md
docs/tasks/: 20251111-tasks.md  20251112-005146_state-and-sender-architecture.md  20251112-015500_remove-connected-clients-from-appstate.md  251111-173839_ddd-and-api-endpoints.md  yyyymmdd-hhmmss_task-summary.md  yyyymmdd-tasks.md
src/: lib.rs
src/client/: domain.rs  formatter.rs  mod.rs  session.rs
src/common/: logger.rs  mod.rs  time.rs
src/common/client/: domain.rs  error.rs  formatter.rs  mod.rs  runner.rs  session.rs  ui.rs
src/domain/: repository.rs
src/infrastructure/: mod.rs
src/infrastructure/dto/: conversion.rs  mod.rs
src/infrastructure/message_pusher/: mod.rs  websocket.rs
src/infrastructure/repository/inmemory/: room.rs
src/server/: domain.rs  handler.rs  runner.rs
src/ui/: handler.rs  mod.rs  runner.rs  server.rs  signal.rs  state.rs
src/utils/client/: session.rs
tests/: integration_test.rs
