[workspace]
resolver = "2"
members = [
    "packages/shared",
    "packages/server",
    "packages/client",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["nukopy <nukopy@gmail.com>"]
license = "MIT"
repository = "https://github.com/nukopy/engawa"
documentation = "https://github.com/nukopy/engawa/blob/main/README.md"
categories = ["network", "chat", "websocket"]
keywords = ["chat", "server", "client", "axum", "websocket"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "ws"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
mockall = "0.13"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
